# SteamAgent

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scraper_broke.yml
.github/workflows/: ci.yml
config/: games.example.yaml
dashboard/: app.py  data.py
dashboard/pages/: 1_Sales.py  1_Vendite.py  2_Wishlist.py  3_Giocatori.py  3_Players.py  4_Traffic.py  4_Traffico.py  5_Playtime.py  6_Recensioni.py  6_Reviews.py  7_Marketing.py
migrations/: README  env.py
migrations/versions/: 3e3a70149bb0_baseline_schema.py
scripts/: dump_globals.py  dump_links.py  dump_tables.py  inspect_partner.py  make_demo_db.py  probe_marketing.py  probe_marketing2.py  probe_marketing3.py
src/steam_agent/: __init__.py  analytics.py  cli.py  envtools.py  games.py  secure.py  settings.py
src/steam_agent/auth/: session.py  steam_guard.py
src/steam_agent/collectors/: base.py  marketing.py  partner_games.py  players.py  playtime.py  public_api.py  reviews.py  sales.py  traffic.py  wishlist.py
src/steam_agent/scraping/: __init__.py  artifacts.py  drift.py  report.py  selectors.py
src/steam_agent/storage/: db.py  migrate.py  models.py  raw.py
tests/: test_analytics.py  test_artifacts.py  test_cli.py  test_drift.py  test_marketing.py  test_parsers.py  test_selectors.py  test_steam_guard.py  test_storage_idempotency.py
