[project]
name = "steam-agent"
version = "0.1.0"
description = "Agentic automation for collecting Steam developer/partner data, with dashboard and LLM analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniele Bianchini" }, { name = "Fantastico Studio" }]
keywords = ["steam", "steamworks", "analytics", "dashboard", "automation", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "playwright>=1.44",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35", "pandas>=2.2", "altair>=5.3"]
llm = ["anthropic>=0.39"]

[project.scripts]
steam-agent = "steam_agent.cli:app"

[dependency-groups]
dev = ["pytest>=8.2", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steam_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
